--- a/mcp-demo-python/requirements.txt
+++ b/mcp-demo-python/requirements.txt
@@ -8,6 +8,7 @@ requests>=2.28.0
 python-dateutil>=2.8.0
 flask
 fastmcp
+fastapi
 
 # Note: Full MCP requires Python 3.10+
 # For demo purposes, we'll use a simplified protocol implementation
